Tidyup fixes to map image overflowing

--- a/Components/MapContainer.razor.css
+++ b/Components/MapContainer.razor.css
@@ -30,3 +30,8 @@
 .low-tier {
     filter: none;
 }
+
+.map-name {
+    text-align: center;
+    overflow-wrap: anywhere;
+}
